# Keepass-Sync

./: .dockerignore  .gitignore  BUGS.MD  CONCEPTS.MD  Dockerfile  README.md  TESTING.MD  docker-compose.yml  make-db.exp  make_db.py  package-lock.json  package.json  security_audit.md  server.ts  test_argon2.ts  test_args.ts  test_kdbx.ts  test_sync.ts  vite.config.ts
android-app/: APK.MD  README.md  TESTING.MD  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/keepasssync/app/: MainActivity.kt
android-app/app/src/main/java/com/keepasssync/app/network/: SyncApiClient.kt
android-app/app/src/main/java/com/keepasssync/app/ui/screens/: ServerSetupScreen.kt  SyncScreen.kt
android-app/app/src/main/java/com/keepasssync/app/ui/theme/: Theme.kt
android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
backend/: Cargo.toml
backend/src/: api.rs  kdbx.rs  main.rs
src/: App.tsx
