[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = "0.4.45"
keepass = { version = "0.13.10", features = ["save_kdbx4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
